# cc-deeds-scraper

./: Dockerfile  models.py  pyproject.toml  pytest.ini  run_tests.py
tests/: README.md  __init__.py  conftest.py  test_database.py  test_extraction.py  test_integration.py  test_smoke.py  test_utils.py
