[project]
name = "deeds-research"
version = "0.1.0"
description = "A tool for pulling document metadata form the Cook County Recorder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "lxml>=6.0.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "database: Database tests",
    "slow: Slow running tests"
]
